--- a/index.html
+++ b/index.html
@@ -186,6 +186,26 @@
           </main>
         </div>
       </div>
+    <script id="template-article-link" type="text/x-handlebars-template">
+      <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+    </script>
+    <script id="template-article-tags" type="text/x-handlebars-template">
+      <li><a href="#tag-{{ id }}"><span>{{ tag }}</span></a></li>
+    </script>
+    <script id="template-article-author" type="text/x-handlebars-template">
+      <li><a href="#author-{{ id }}"><span>{{ author }}</span></a></li>
+    </script>
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+      {{#each tags}}
+      <li><a href="#tag-{{ tag }}" class="{{ className }}">{{ tag }} </a></li>
+      {{/each}}
+    </script>
+    <script id="template-author-list-link" type="text/x-handlebars-template">
+      {{#each tags}}
+      <li><a href="#author-{{ author }}">{{ author }} ({{ count }}) </a></li>
+      {{/each}}
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
