--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </script>
     <script id="template-author-list-link" type="text/x-handlebars-template">
       {{#each tags}}
-      <li><a href="#author-{{ author }}">{{ author }} ({{ count }}) </a></li>
+      <li><a href="#author-{{ }}">{{  }} ({{ count }}) </a></li>
       {{/each}}
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
