--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <li><a href="#tag-{{ id }}"><span>{{ tag }}</span></a></li>
     </script>
     <script id="template-article-author" type="text/x-handlebars-template">
-      <li><a href="#author-{{ id }}"><span>{{ author }}</span></a></li>
+      <li><a href="#author-{{ id }}"><span>{{ authors }}</span></a></li>
     </script>
     <script id="template-tag-cloud-link" type="text/x-handlebars-template">
       {{#each tags}}
@@ -202,7 +202,7 @@
     </script>
     <script id="template-author-list-link" type="text/x-handlebars-template">
       {{#each tags}}
-      <li><a href="#author-{{ }}">{{  }} ({{ count }}) </a></li>
+      <li><a href="#author-{{ author }}">{{ author }} ({{ count }}) </a></li>
       {{/each}}
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
