Add handlebars to right side author list

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       {{/each}}
     </script>
     <script id="template-author-list-link" type="text/x-handlebars-template">
-      {{#each tags}}
+      {{#each authors}}
       <li><a href="#author-{{ author }}">{{ author }} ({{ count }}) </a></li>
       {{/each}}
     </script>
